# Python-Learning

./: Introduction to python.ipynb  README.md  draw_eight.py  myfile.yaml
1. Introduction to Python/: draw_infinity.py
10. Scientific file formats/: Scientific file formats.ipynb  atoms.csv  foo.hdf5  molecules.db  parsereactions.py  reaction.ttl  reaction2.ttl  reaction3.ttl  reactions.csv  reactions.xsd  system.py  system.xml  system2.xml
2. Intermediate Python/: Intermediate Python.ipynb  house.json  mydata.txt
2. Intermediate Python/greengraph/: map.py
4. Version Control/: Pennines.md  Version Control.ipynb  lakeland.md
5. Testing/: commands  energy_example.py  overlap.py  test_overlap.py
5. Testing/DiffusionExercise/: MonteCarlo.py  test_model.py
5. Testing/continuous_int/: test_demo.py
5. Testing/diffusion/: .coverage  model.py  test_model.py
6. Software Projects/: Software Projects.ipynb  command.py  greeter.py
6. Software Projects/troll_treasure/: pyproject.toml  run_prob.py  run_single.py
6. Software Projects/troll_treasure/dungeons/: dungeon.yml
6. Software Projects/troll_treasure/treasure/: __init__.py  agents.py  cli.py  dungeon.py  games.py  rooms.py  treasure.py
6. Software Projects/troll_treasure/treasure.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
7. Construction and Design/: mypy_example.py  pylint_example.py
7. Construction and Design/bad-boids/: animate.py  boids.py  pyproject.toml  record_fixture.py  test_boids.py
8. Advanced Programming Techniques/: Advanced Programming Techniques.ipynb  test_not_skipped.py  test_skipped.py
9. Programming for Speed/: Programming for Speed.ipynb  sleeping.py
greengraph/: graph.py
(+1 files in other folders)
