[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "treasure"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "PyYAML ~= 6.0",
    "art ~= 5.7",
]

[tool.setuptools.packages.find]
include = ["treasure*"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
treasure = "treasure.cli:main"
